// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plancache.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 86,
              "relname": "pcachetest",
              "relpersistence": "t",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 114,
                    "relname": "int8_tbl",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 107,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 107,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "prepstmt",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 68,
                    "relname": "pcachetest",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 61,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 61,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 47,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "int8",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "prepstmt2",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 72,
                    "relname": "pcachetest",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 65,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 65,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "q1",
                          },
                        },
                      ],
                      "location": 89,
                    },
                  },
                  "location": 92,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "ParamRef": {
                      "location": 94,
                      "number": 1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt2",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 123,
                },
                "location": 20,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pcachetest",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt2",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 123,
                },
                "location": 19,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateTableAsStmt": {
          "into": {
            "onCommit": "ONCOMMIT_NOOP",
            "rel": {
              "inh": true,
              "location": 147,
              "relname": "pcachetest",
              "relpersistence": "t",
            },
          },
          "objtype": "OBJECT_TABLE",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 175,
                    "relname": "int8_tbl",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "sortClause": [
                {
                  "SortBy": {
                    "location": -1,
                    "node": {
                      "A_Const": {
                        "ival": {
                          "ival": 2,
                        },
                        "location": 193,
                      },
                    },
                    "sortby_dir": "SORTBY_DEFAULT",
                    "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  },
                },
              ],
              "targetList": [
                {
                  "ResTarget": {
                    "location": 168,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 168,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt2",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 123,
                },
                "location": 19,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ColumnDef": {
                    "colname": "q3",
                    "is_local": true,
                    "location": 169,
                    "typeName": {
                      "location": 172,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
                "subtype": "AT_AddColumn",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 147,
            "relname": "pcachetest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 35 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt2",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 123,
                },
                "location": 19,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "name": "q3",
                "subtype": "AT_DropColumn",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 72,
            "relname": "pcachetest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 39 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "prepstmt2",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 123,
                },
                "location": 19,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 42 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 162,
                    "relname": "pcachetest",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 155,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 155,
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 132,
            "relname": "pcacheview",
            "relpersistence": "t",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 47 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "vprep",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 33,
                    "relname": "pcacheview",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 26,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 26,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "vprep",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 73,
                    "relname": "pcachetest",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 53,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "q1",
                            },
                          },
                        ],
                        "location": 53,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 57,
                    "name": "q2",
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "q2",
                                },
                              },
                            ],
                            "location": 57,
                          },
                        },
                        "location": 59,
                        "name": [
                          {
                            "String": {
                              "sval": "/",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 60,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
          "replace": true,
          "view": {
            "inh": true,
            "location": 30,
            "relname": "pcacheview",
            "relpersistence": "t",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "vprep",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "cache_test",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
declare total int;
begin
	create temp table t1(f1 int);
	insert into t1 values($1);
	insert into t1 values(11);
	insert into t1 values(12);
	insert into t1 values(13);
	select sum(f1) into total from t1;
	drop table t1;
	return total;
end
",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 84,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "plpgsql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 332,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 67,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 80,
            "names": [
              {
                "String": {
                  "sval": "pg_catalog",
                },
              },
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 72 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 20,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cache_test",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 19,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cache_test",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 19,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cache_test",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 76 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 88,
                    "name": "f1",
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 88,
                          },
                        },
                        "location": 89,
                        "name": [
                          {
                            "String": {
                              "sval": "+",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 90,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
          "view": {
            "inh": true,
            "location": 73,
            "relname": "v1",
            "relpersistence": "t",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "cache_test_2",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
begin
	return f1 from v1;
end",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 45,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "plpgsql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 83,
              },
            },
          ],
          "returnType": {
            "location": 41,
            "names": [
              {
                "String": {
                  "sval": "pg_catalog",
                },
              },
              {
                "String": {
                  "sval": "int4",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cache_test_2",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 88 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 45,
                    "name": "f1",
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 2,
                                },
                                "location": 45,
                              },
                            },
                            "location": 46,
                            "name": [
                              {
                                "String": {
                                  "sval": "+",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 2,
                                },
                                "location": 47,
                              },
                            },
                          },
                        },
                        "location": 48,
                        "name": [
                          {
                            "String": {
                              "sval": "+",
                            },
                          },
                        ],
                        "rexpr": {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 49,
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
          "replace": true,
          "view": {
            "inh": true,
            "location": 30,
            "relname": "v1",
            "relpersistence": "t",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 91 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cache_test_2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 92 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ViewStmt": {
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 45,
                    "name": "f1",
                    "val": {
                      "A_Expr": {
                        "kind": "AEXPR_OP",
                        "lexpr": {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Expr": {
                                "kind": "AEXPR_OP",
                                "lexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 2,
                                    },
                                    "location": 45,
                                  },
                                },
                                "location": 46,
                                "name": [
                                  {
                                    "String": {
                                      "sval": "+",
                                    },
                                  },
                                ],
                                "rexpr": {
                                  "A_Const": {
                                    "ival": {
                                      "ival": 2,
                                    },
                                    "location": 47,
                                  },
                                },
                              },
                            },
                            "location": 48,
                            "name": [
                              {
                                "String": {
                                  "sval": "+",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 4,
                                },
                                "location": 49,
                              },
                            },
                          },
                        },
                        "location": 50,
                        "name": [
                          {
                            "String": {
                              "sval": "+",
                            },
                          },
                        ],
                        "rexpr": {
                          "SubLink": {
                            "location": 51,
                            "subLinkType": "EXPR_SUBLINK",
                            "subselect": {
                              "SelectStmt": {
                                "fromClause": [
                                  {
                                    "RangeVar": {
                                      "inh": true,
                                      "location": 77,
                                      "relname": "tenk1",
                                      "relpersistence": "p",
                                    },
                                  },
                                ],
                                "limitOption": "LIMIT_OPTION_DEFAULT",
                                "op": "SETOP_NONE",
                                "targetList": [
                                  {
                                    "ResTarget": {
                                      "location": 59,
                                      "val": {
                                        "FuncCall": {
                                          "args": [
                                            {
                                              "ColumnRef": {
                                                "fields": [
                                                  {
                                                    "String": {
                                                      "sval": "unique1",
                                                    },
                                                  },
                                                ],
                                                "location": 63,
                                              },
                                            },
                                          ],
                                          "funcformat": "COERCE_EXPLICIT_CALL",
                                          "funcname": [
                                            {
                                              "String": {
                                                "sval": "max",
                                              },
                                            },
                                          ],
                                          "location": 59,
                                        },
                                      },
                                    },
                                  },
                                ],
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              ],
            },
          },
          "replace": true,
          "view": {
            "inh": true,
            "location": 30,
            "relname": "v1",
            "relpersistence": "t",
          },
          "withCheckOption": "NO_CHECK_OPTION",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 95 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cache_test_2",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 96 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateSchemaStmt": {
          "schemaElts": [
            {
              "CreateStmt": {
                "oncommit": "ONCOMMIT_NOOP",
                "relation": {
                  "inh": true,
                  "location": 109,
                  "relname": "abc",
                  "relpersistence": "p",
                },
                "tableElts": [
                  {
                    "ColumnDef": {
                      "colname": "f1",
                      "is_local": true,
                      "location": 114,
                      "typeName": {
                        "location": 117,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                ],
              },
            },
          ],
          "schemaname": "s1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 101 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateSchemaStmt": {
          "schemaElts": [
            {
              "CreateStmt": {
                "oncommit": "ONCOMMIT_NOOP",
                "relation": {
                  "inh": true,
                  "location": 34,
                  "relname": "abc",
                  "relpersistence": "p",
                },
                "tableElts": [
                  {
                    "ColumnDef": {
                      "colname": "f1",
                      "is_local": true,
                      "location": 39,
                      "typeName": {
                        "location": 42,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                ],
              },
            },
          ],
          "schemaname": "s2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 104 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "abc",
            "relpersistence": "p",
            "schemaname": "s1",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 123,
                          },
                          "location": 28,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "abc",
            "relpersistence": "p",
            "schemaname": "s2",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 456,
                          },
                          "location": 27,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 107 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 20,
                "sval": {
                  "sval": "s1",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "search_path",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 109 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "p1",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 31,
                    "relname": "abc",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 23,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 23,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 111 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "p1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 113 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 20,
                "sval": {
                  "sval": "s2",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "search_path",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 115 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 17,
                "relname": "abc",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 117 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "p1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 119 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "ColumnDef": {
                    "colname": "f2",
                    "is_local": true,
                    "location": 32,
                    "typeName": {
                      "location": 35,
                      "names": [
                        {
                          "String": {
                            "sval": "float8",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
                "subtype": "AT_AddColumn",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "abc",
            "relpersistence": "p",
            "schemaname": "s1",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 120 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "p1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 123 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "String": {
                "sval": "s1",
              },
            },
          ],
          "removeType": "OBJECT_SCHEMA",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 125 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_CASCADE",
          "objects": [
            {
              "String": {
                "sval": "s2",
              },
            },
          ],
          "removeType": "OBJECT_SCHEMA",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 126 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "kind": "VAR_RESET",
          "name": "search_path",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 128 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateSeqStmt": {
          "sequence": {
            "inh": true,
            "location": 81,
            "relname": "seq",
            "relpersistence": "t",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 132 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "name": "p2",
          "query": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 23,
                    "val": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 31,
                              "sval": {
                                "sval": "seq",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "nextval",
                            },
                          },
                        ],
                        "location": 23,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 134 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "p2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 136 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "seq",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_SEQUENCE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 138 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateSeqStmt": {
          "sequence": {
            "inh": true,
            "location": 23,
            "relname": "seq",
            "relpersistence": "t",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 140 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "p2",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 142 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "cachebug",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
declare r int;
begin
  drop table if exists temptable cascade;
  create temp table temptable as select * from generate_series(1,3) as f1;
  create temp view vv as select * from temptable;
  for r in select * from vv loop
    raise notice '%', r;
  end loop;
end",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 133,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "plpgsql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 403,
              },
            },
          ],
          "returnType": {
            "location": 128,
            "names": [
              {
                "String": {
                  "sval": "void",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 156 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cachebug",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 158 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "cachebug",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 159 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "partspec": {
            "location": 188,
            "partParams": [
              {
                "PartitionElem": {
                  "location": 206,
                  "name": "a",
                },
              },
            ],
            "strategy": "PARTITION_STRATEGY_LIST",
          },
          "relation": {
            "inh": true,
            "location": 165,
            "relname": "pc_list_parted",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 181,
                "typeName": {
                  "location": 183,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 163 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 45,
                "relname": "pc_list_parted",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "listdatums": [
              {
                "A_Const": {
                  "isnull": true,
                  "location": 75,
                },
              },
            ],
            "location": 71,
            "strategy": "l",
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "pc_list_part_null",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 164 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "pc_list_parted",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "listdatums": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 72,
                },
              },
            ],
            "location": 68,
            "strategy": "l",
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "pc_list_part_1",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 165 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 44,
                "relname": "pc_list_parted",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "is_default": true,
            "location": 59,
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "pc_list_part_def",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 166 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 27,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "int4",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "pstmt_def_insert",
          "query": {
            "InsertStmt": {
              "override": "OVERRIDING_NOT_SET",
              "relation": {
                "inh": true,
                "location": 47,
                "relname": "pc_list_part_def",
                "relpersistence": "p",
              },
              "selectStmt": {
                "SelectStmt": {
                  "limitOption": "LIMIT_OPTION_DEFAULT",
                  "op": "SETOP_NONE",
                  "valuesLists": [
                    {
                      "List": {
                        "items": [
                          {
                            "ParamRef": {
                              "location": 71,
                              "number": 1,
                            },
                          },
                        ],
                      },
                    },
                  ],
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 167 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "pstmt_def_insert",
          "params": [
            {
              "A_Const": {
                "isnull": true,
                "location": 41,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 169 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "pstmt_def_insert",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 26,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 170 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "inhRelations": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "pc_list_parted",
                "relpersistence": "p",
              },
            },
          ],
          "oncommit": "ONCOMMIT_NOOP",
          "partbound": {
            "listdatums": [
              {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 72,
                },
              },
            ],
            "location": 68,
            "strategy": "l",
          },
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "pc_list_part_2",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 171 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "pstmt_def_insert",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 2,
                },
                "location": 26,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 172 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "PartitionCmd": {
                    "name": {
                      "inh": true,
                      "location": 45,
                      "relname": "pc_list_part_null",
                      "relpersistence": "p",
                    },
                  },
                },
                "subtype": "AT_DetachPartition",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "pc_list_parted",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 173 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "pstmt_def_insert",
          "params": [
            {
              "A_Const": {
                "isnull": true,
                "location": 42,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 175 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pc_list_part_1",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 176 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "pstmt_def_insert",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 42,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 178 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pc_list_parted",
                    },
                  },
                ],
              },
            },
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "pc_list_part_null",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 179 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeallocateStmt": {
          "name": "pstmt_def_insert",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 180 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 40,
            "relname": "test_mode",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "a",
                "is_local": true,
                "location": 51,
                "typeName": {
                  "location": 53,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 184 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "test_mode",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "all": true,
              "larg": {
                "fromClause": [
                  {
                    "RangeFunction": {
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1,
                                        },
                                        "location": 53,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 1000,
                                        },
                                        "location": 55,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 37,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 30,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 30,
                        },
                      },
                    },
                  },
                ],
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_UNION",
              "rarg": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 78,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 78,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 185 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "indexParams": [
            {
              "IndexElem": {
                "name": "a",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 17,
            "relname": "test_mode",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 186 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 9,
                  "relname": "test_mode",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 187 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "PrepareStmt": {
          "argtypes": [
            {
              "TypeName": {
                "location": 24,
                "names": [
                  {
                    "String": {
                      "sval": "pg_catalog",
                    },
                  },
                  {
                    "String": {
                      "sval": "int4",
                    },
                  },
                ],
                "typemod": -1,
              },
            },
          ],
          "name": "test_mode_pp",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 53,
                    "relname": "test_mode",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 39,
                    "val": {
                      "FuncCall": {
                        "agg_star": true,
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "count",
                            },
                          },
                        ],
                        "location": 39,
                      },
                    },
                  },
                },
              ],
              "whereClause": {
                "A_Expr": {
                  "kind": "AEXPR_OP",
                  "lexpr": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "a",
                          },
                        },
                      ],
                      "location": 69,
                    },
                  },
                  "location": 71,
                  "name": [
                    {
                      "String": {
                        "sval": "=",
                      },
                    },
                  ],
                  "rexpr": {
                    "ParamRef": {
                      "location": 73,
                      "number": 1,
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 189 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 47,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "generic_plans",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "custom_plans",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 79,
                },
              },
              "location": 84,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 86,
                  "sval": {
                    "sval": "test_mode_pp",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 191 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 68,
                "sval": {
                  "sval": "auto",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "plan_cache_mode",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 194 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 10,
              },
            },
          ],
          "query": {
            "ExecuteStmt": {
              "name": "test_mode_pp",
              "params": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 42,
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 195 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 47,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "generic_plans",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "custom_plans",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 79,
                },
              },
              "location": 84,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 86,
                  "sval": {
                    "sval": "test_mode_pp",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 197 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 47,
                "sval": {
                  "sval": "force_generic_plan",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "plan_cache_mode",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 200 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 10,
              },
            },
          ],
          "query": {
            "ExecuteStmt": {
              "name": "test_mode_pp",
              "params": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 42,
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 201 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 47,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "generic_plans",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "custom_plans",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 79,
                },
              },
              "location": 84,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 86,
                  "sval": {
                    "sval": "test_mode_pp",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 203 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 64,
                "sval": {
                  "sval": "auto",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "plan_cache_mode",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 206 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "test_mode_pp",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 22,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 206 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "test_mode_pp",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 28,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 207 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "test_mode_pp",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 28,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 208 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "test_mode_pp",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 28,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 209 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 53,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 20,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "generic_plans",
                        },
                      },
                    ],
                    "location": 20,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 35,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "custom_plans",
                        },
                      },
                    ],
                    "location": 35,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 85,
                },
              },
              "location": 90,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 92,
                  "sval": {
                    "sval": "test_mode_pp",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 212 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExecuteStmt": {
          "name": "test_mode_pp",
          "params": [
            {
              "A_Const": {
                "ival": {
                  "ival": 1,
                },
                "location": 22,
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 212 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 53,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 20,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "generic_plans",
                        },
                      },
                    ],
                    "location": 20,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 35,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "custom_plans",
                        },
                      },
                    ],
                    "location": 35,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 85,
                },
              },
              "location": 90,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 92,
                  "sval": {
                    "sval": "test_mode_pp",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 215 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 50,
              },
            },
          ],
          "query": {
            "ExecuteStmt": {
              "name": "test_mode_pp",
              "params": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 82,
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 218 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VariableSetStmt": {
          "args": [
            {
              "A_Const": {
                "location": 59,
                "sval": {
                  "sval": "force_custom_plan",
                },
              },
            },
          ],
          "kind": "VAR_SET_VALUE",
          "name": "plan_cache_mode",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 221 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "ExplainStmt": {
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "off",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "costs",
                "location": 10,
              },
            },
          ],
          "query": {
            "ExecuteStmt": {
              "name": "test_mode_pp",
              "params": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 42,
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 222 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 47,
                "relname": "pg_prepared_statements",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "name",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "generic_plans",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "custom_plans",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "name",
                      },
                    },
                  ],
                  "location": 79,
                },
              },
              "location": 84,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "location": 86,
                  "sval": {
                    "sval": "test_mode_pp",
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`plancache.sql > line 224 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "test_mode",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
